; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cadence/extr_macb_main.c_macb_rx_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cadence/extr_macb_main.c_macb_rx_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macb_queue = type { i8*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.macb_queue*, i32)* @macb_rx_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @macb_rx_buffer(%struct.macb_queue* %0, i32 %1) #0 {
  %3 = alloca %struct.macb_queue*, align 8
  %4 = alloca i32, align 4
  store %struct.macb_queue* %0, %struct.macb_queue** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.macb_queue*, %struct.macb_queue** %3, align 8
  %6 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = load %struct.macb_queue*, %struct.macb_queue** %3, align 8
  %9 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.macb_queue*, %struct.macb_queue** %3, align 8
  %14 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @macb_rx_ring_wrap(%struct.TYPE_2__* %15, i32 %16)
  %18 = mul nsw i32 %12, %17
  %19 = sext i32 %18 to i64
  %20 = getelementptr i8, i8* %7, i64 %19
  ret i8* %20
}

declare dso_local i32 @macb_rx_ring_wrap(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
